--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Static Analysis
+name: Static Analysis Flutter
 
 # Controls when the workflow will run
 on:
